# py-best

./: .gitignore  README.md  generalized_linear_model.py  setup.py  test_mcmc_spgp.py  test_spgp.py
best/: __init__.py  _basic_objects.py  domain.py  random_element.py  solver.py  surrogate_model.py
demo/: test_mcmc.py  test_mgp.py  test_mgp_simple.py  test_smc.py  test_treed_gp.py
doc/: Makefile  conf.py  core.rst  cov.rst  glm.rst  gp.rst  gpc.rst  index.rst  installation.rst  intro.rst  inverse.rst  inverse_examples.rst  linalg.rst  make.bat  maps.rst  misc.rst  random.rst  reference.rst  rvm.rst  serialization.rst  uq_examples.rst
doctrees/: basic.doctree  core.doctree  cov.doctree  design.doctree  domain.doctree  environment.pickle  examples.doctree  glm.doctree  gp.doctree  gpc.doctree  index.doctree  installation.doctree  intro.doctree  inverse.doctree  inverse_examples.doctree  linalg.doctree  maps.doctree  misc.doctree  random.doctree  reference.doctree  rvm.doctree  serialization.doctree  uq_examples.doctree
examples/: __init__.py  test_two_phase_scratch.py
html/: basic.html  core.html  cov.html  design.html  domain.html  examples.html  genindex.html  glm.html  gp.html  gpc.html  index.html  installation.html  intro.html  inverse.html  linalg.html  (+11 more)
src/: CMakeLists.txt  _dpstrf.cpp  _ggsvd.cpp  _kron.cpp  _lhs.cpp  _pstrf.cpp  build.sh  compile.sh  latin_center_dataset.hpp  numpy_interface.hpp  test_kron.py
src/lapack/: ggsvd.f  pstrf.f
src/orthpol/: Makefile  ORTHPOL  dlancz.f  dqgp.f  dsti.f  eval.f  gauss.f  lancz.f  r1mach.f  recur.f  sti.f
(+234 files in other folders)
